force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/ArdiraSurvey__Survey_Preferences__c.object-meta.xml
<CustomObject>
    <description>The object stores the information about a survey preferences.</description>
    <label>Ardira Survey Preferences</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Survey Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>