force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Already_Completed_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Already_Completed_Message__c</fullName>
    <description>Message to display when a participant clicks to respond to a survey that has been completed by the participant.</description>
    <inlineHelpText>Message to display when a participant clicks to respond to a survey that has been completed by the participant.</inlineHelpText>
    <label>Already Completed Message</label>
    <type>TextArea</type>
</CustomField>