force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Always_Show_Footer_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Always_Show_Footer_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to show the footer message on all pages when a survey is responded. If not enabled, footer message will be visible only on the landing page.</description>
    <inlineHelpText>Enable to show the footer message on all pages when a survey is responded. If not enabled, footer message will be visible only on the landing page.</inlineHelpText>
    <label>Always Show Footer Message</label>
    <type>Checkbox</type>
</CustomField>