force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Always_Show_Landing_Page_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Always_Show_Landing_Page_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to show the landing page message on all pages when a survey is responded. If not enabled, landing page message will be visible only on the landing page.</description>
    <inlineHelpText>Enable to show the landing page message on all pages when a survey is responded. If not enabled, landing page message will be visible only on the landing page.</inlineHelpText>
    <label>Always Show Landing Page Message</label>
    <type>Checkbox</type>
</CustomField>