force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Begin_Survey_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Begin_Survey_Button_Label__c</fullName>
    <defaultValue>&quot;Begin Survey&quot;</defaultValue>
    <description>Label to be used for &quot;Begin Survey&quot; button.</description>
    <inlineHelpText>Label to use for the “Begin Survey” button on the landing page.</inlineHelpText>
    <label>Begin Survey Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>