force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Display_Powered_by__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Powered_by__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Displays Powered by text in survey footer.</description>
    <inlineHelpText>Enable to display Powered by text in survey response interface.</inlineHelpText>
    <label>Display Powered by</label>
    <type>Checkbox</type>
</CustomField>