force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Footer_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Footer_Message__c</fullName>
    <description>Message to display in footer area of the survey response interface.</description>
    <inlineHelpText>Message to display in footer area of the survey response interface.</inlineHelpText>
    <label>Footer Message</label>
    <length>8192</length>
    <type>Html</type>
</CustomField>