force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Footer_Positioning__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Footer_Positioning__c</fullName>
    <description>Standard: Footer will be right below question content, even if content is less or more.
Sticky: Footer will stick to the bottom, other content will be scrollable.</description>
    <inlineHelpText>Standard: The footer will be positioned directly beneath the question content, regardless of the content&apos;s length.
Sticky: The footer will remain fixed at the bottom of the page, allowing other content to scroll above it.</inlineHelpText>
    <label>Footer Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>