force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Landing_Page_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Landing_Page_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Select a background color for the landing page</description>
    <inlineHelpText>Select a background color for the landing page area.</inlineHelpText>
    <label>Landing Page Background Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>