force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Landing_Page_Background_Image__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Landing_Page_Background_Image__c</fullName>
    <description>Upload an image to display as a background image for landing page.</description>
    <inlineHelpText>Upload an image to display as a background image for landing page.</inlineHelpText>
    <label>Landing Page Background Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>