force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Landing_Page_Background_Image_Blur__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Landing_Page_Background_Image_Blur__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Setup image blurriness in scale of 0 to 20</description>
    <inlineHelpText>Select the background image blurriness in scale of 0 to 20</inlineHelpText>
    <label>Landing Page Background Image Blur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>