force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Landing_Page_Background_Image_Opacity__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Landing_Page_Background_Image_Opacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Setup image opacity in scale of 0 to 1</description>
    <inlineHelpText>Select the background image opacity in scale of 0 to 1</inlineHelpText>
    <label>Landing Page Background Image Opacity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>