force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Landing_Page_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Landing_Page_Message__c</fullName>
    <description>Introduction message to be displayed in the landing page.</description>
    <inlineHelpText>Message to display in the landing page of the survey response interface.</inlineHelpText>
    <label>Landing Page Message</label>
    <length>8192</length>
    <type>Html</type>
</CustomField>