force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Show_First_Question_on_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_First_Question_on_Landing_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, displays first question/section on landing page with &quot;Next&quot; button. &quot;Begin Survey&quot; button will not be displayed.</description>
    <inlineHelpText>Enable to show the first question in the landing page.</inlineHelpText>
    <label>Show First Question on Landing Page</label>
    <type>Checkbox</type>
</CustomField>