force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Show_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Landing_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn off to take user directly to question response page.</description>
    <inlineHelpText>Enable to show the landing page when a participant clicks to respond to a survey. Disable to take a participant directly to the survey response interface.</inlineHelpText>
    <label>Show Landing Page</label>
    <type>Checkbox</type>
</CustomField>