force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Show_Thank_You_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Thank_You_Page__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, thank you page will be displayed.</description>
    <inlineHelpText>Enable to redirect a participant to the thank you page upon submission of the survey.</inlineHelpText>
    <label>Show Thank You Page</label>
    <type>Checkbox</type>
</CustomField>