force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Survey_Completion_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Completion_Message__c</fullName>
    <description>Message to display when a participant submits the survey response.</description>
    <inlineHelpText>Message to display when a participant submits the survey response.</inlineHelpText>
    <label>Survey Completion Message</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>