force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Thank_You_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Button_Label__c</fullName>
    <defaultValue>&quot;Thank You&quot;</defaultValue>
    <description>Label to be used for &quot;Thank You&quot; button.</description>
    <inlineHelpText>Label to use for the &apos;thank you&apos; button in the survey response interface.</inlineHelpText>
    <label>Thank You Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>