force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Thank_You_Button_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Button_Link_URL__c</fullName>
    <description>On button click, user will be redirected to button link URL, if empty close browser.</description>
    <inlineHelpText>User will be redirected to the link added to this field upon clicking the thank you button.
If this field is left empty, user’s browser window will be closed.</inlineHelpText>
    <label>Deprecated Thank You Button Link URL</label>
    <type>Url</type>
</CustomField>