force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Thank_You_Button_Link_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Button_Link_URL_Long__c</fullName>
    <description>User will be redirected to the link upon clicking the thank you button. If this field is left empty, user’s browser window will be closed.</description>
    <inlineHelpText>User will be redirected to the link upon clicking the thank you button. If this field is left empty, user’s browser window will be closed.</inlineHelpText>
    <label>Thank You Button Link URL - Long</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>