force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Message__c</fullName>
    <description>Thank you message to displayed after survey is completed.</description>
    <inlineHelpText>Message displayed on the thank you page of the survey’s responder interface.
This page appears after the survey has been completed.</inlineHelpText>
    <label>Thank You Message</label>
    <length>8192</length>
    <type>Html</type>
</CustomField>