force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__ThankYou_Page_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__ThankYou_Page_Background_Color__c</fullName>
    <description>Select a background color for the Thank you page</description>
    <inlineHelpText>Select a background color for the Thank you page area.</inlineHelpText>
    <label>ThankYou Page Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>