force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Unsubscribe_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unsubscribe_Button_Label__c</fullName>
    <description>To display an unsubscribe button to commit preferences update, set the button label..</description>
    <inlineHelpText>To display an unsubscribe button to commit preferences update, set the button label.</inlineHelpText>
    <label>Unsubscribe Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>