force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Unsubscribe_Button_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unsubscribe_Button_Link_URL__c</fullName>
    <description>User will be redirected to the link upon clicking the unsubscribe button. If this field is left empty, user’s browser window will be closed.</description>
    <inlineHelpText>User will be redirected to the link upon clicking the unsubscribe button. If this field is left empty, user’s browser window will be closed.</inlineHelpText>
    <label>Unsubscribe Button Link URL</label>
    <type>Url</type>
</CustomField>