force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Unsubscribe_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unsubscribe_Message__c</fullName>
    <description>A message to display when unsubscribe preferences are updated.</description>
    <inlineHelpText>A message to display when unsubscribe preferences are updated.</inlineHelpText>
    <label>Unsubscribe Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>