force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Update_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Update_Email_Opt_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, a survey target lead/contact object record&apos;s Email Opt Out field will be updated using the selected unsubscribe option value.</description>
    <inlineHelpText>When enabled, a survey target lead/contact object record&apos;s Email Opt Out field will be updated using the selected unsubscribe option value.</inlineHelpText>
    <label>Update Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>