force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/fields/ArdiraSurvey__Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Message__c</fullName>
    <description>Message to displayed after a completed survey is validated.</description>
    <inlineHelpText>Message to display when a participant submits incomplete survey response.</inlineHelpText>
    <label>Validation Message</label>
    <length>8192</length>
    <type>Html</type>
</CustomField>