force-app/main/default/objects/ArdiraSurvey__Survey_Preferences__c/listViews/ArdiraSurvey__All.listView-meta.xml
<ListView>
    <fullName>ArdiraSurvey__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>